--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,10 +1,17 @@
-@import 'settings';
-@import 'foundation';
+@import "semantic-ui";
 
-body {
-	padding-top: 60px;
-}
+// body {
+// 	padding-top: 60px;
+// }
 
 .center {
 	text-align: center;
+}
+
+a {
+	text-decoration: none;
+}
+
+ui form {
+	margin-left: 10px;
 }
