--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,33 +1,32 @@
-.row
-  .medium-4.columns.float-left
-    h3.center Sign up 
-    = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-      .alert 
-        = devise_error_messages!
-      .field
-        = f.label :first_name
-        br
-        = f.text_field :first_name
-      .field
-        = f.label :last_name
-        br
-        = f.text_field :last_name
-      .field
-        = f.label :email
-        br
-        = f.email_field :email, autofocus: true
-      .field
-        = f.label :password
-        - if @minimum_password_length
-          em
-            | (
-            = @minimum_password_length
-            |  characters minimum)
-        br
-        = f.password_field :password, autocomplete: "off"
-      .field
-        = f.label :password_confirmation
-        br
-        = f.password_field :password_confirmation, autocomplete: "off"
-      .actions
-        = f.submit "Sign up", class: 'button expanded'
+.ui.form
+  h3 Sign up 
+  = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+    .alert 
+      = devise_error_messages!
+    .field.four.wide.column
+      = f.label :first_name
+      br
+      = f.text_field :first_name
+    .field.four.wide.column
+      = f.label :last_name
+      br
+      = f.text_field :last_name
+    .field.four.wide.column
+      = f.label :email
+      br
+      = f.email_field :email, autofocus: true
+    .field.four.wide.column
+      = f.label :password
+      - if @minimum_password_length
+        em
+          | (
+          = @minimum_password_length
+          |  characters minimum)
+      br
+      = f.password_field :password, autocomplete: "off"
+    .field.four.wide.column
+      = f.label :password_confirmation
+      br
+      = f.password_field :password_confirmation, autocomplete: "off"
+    .actions
+      = f.submit "Sign up", class: 'ui primary basic button'
