Facebook authentication completed

--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -1,5 +1,5 @@
 ul.ui.menu
-	- if user_signed_in?
+	- if user_signed_in? || !current_user.nil?
 	  li.item
 	    = link_to 'Profile', user_path(current_user)
 	  li.item
