mid user posts completion

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -12,6 +12,10 @@ a {
 	text-decoration: none;
 }
 
-ui form {
-	margin-left: 10px;
+// ui form {
+// 	margin-left: 10px;
+// }
+
+li {
+	list-style: none;
 }
