--- a/app/views/shared/_post_form.html.slim
+++ b/app/views/shared/_post_form.html.slim
@@ -3,4 +3,4 @@
 		= f.label :post
 		= f.text_area :content, rows: 6, placeholder: 'Write something'
 
-	= f.submit 'Post'
+	= f.submit 'Post', class: 'ui primary basic button'
