--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,8 +1,9 @@
 .ui.grid
 	.four.wide.column
 	.wall.six.wide.column
-		= paginate @feed_items
+		.center.aligned= paginate @feed_items
 		= render 'shared/wall'	
+		
 
 	.post_form.center.aligned
 		= render 'shared/post_form'
