--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,9 +8,12 @@ html
     = csrf_meta_tags
   body
     = render 'layouts/header'
+    
+    = render 'shared/error_messages'
 
     p.notice
       = notice
     p.alert
       = alert
+      
     = yield
