--- a/app/views/shared/_wall.html.slim
+++ b/app/views/shared/_wall.html.slim
@@ -1,7 +1,7 @@
 ul
 	- @feed_items.each do |post|
 		.ui.raised.segment
-			= link_to '#' do
+			= link_to post_comments_path(post) do
 				li = "Posted by #{post.user.first_name} #{post.user.last_name} #{time_ago_in_words(post.created_at) }"
 				li = post.content
 				
