added like button

--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -2,7 +2,22 @@
 	.four.wide.column
 	.eight.wide.column
 		ul.left.aligned.grid
+			.center = paginate @posts
 			- @posts.each do |post|
 				.ui.raised.segment
-					li = "Post by #{ post.user.first_name } #{ post.user.last_name } #{time_ago_in_words(post.created_at) }"
-					li = post.content
+					= link_to post_comments_path(post) do
+						li = "Post by #{ post.user.first_name } #{ post.user.last_name } #{time_ago_in_words(post.created_at) }"
+						li = post.content
+						li = "#{ post.likes.count } Likes"
+				#likes_form
+					- if current_user.likes.find_by(post_id: post)
+						= form_for :likes do |f|
+							= f.submit 'Liked', type: 'button', class: 'ui primary button'
+					- else
+						= form_for [post, post.likes.new] do |f|
+							= f.hidden_field :post_id, value: post.id
+							= f.submit 'Like', class: 'ui primary button'
+
+				/ form action=post_likes_path
+				/ 	input type='hidden' name='liked' value=post.id
+				/ 	input type='submit' name='like' value='Like'2
