--- a/app/views/comments/index.html.slim
+++ b/app/views/comments/index.html.slim
@@ -1,14 +1,17 @@
-h1.center Comments(#{@post.comments.count})
+h1.center Comments
+	("#{@post.comments.count}")
 
 .ui.grid
 	.four.wide.column
 	.eight.wide.column
 		ul.left.aligned.grid
-			.center = paginate @comments
+			.center = paginate @comments, params: { action: :index }
 			- @comments.each do |comment|
 				.ui.raised.segment
-					li = "#{ comment.user.first_name } #{ comment.user.last_name }"
+					li = "#{ comment.user.first_name.capitalize } #{ comment.user.last_name.capitalize }"
 					li = comment.content
+					- if current_user.id == comment.user_id
+						= link_to 'Delete', post_comment_path(@post, comment), method: :delete
 			.center = paginate @comments
 
 .ui.grid
@@ -16,9 +19,10 @@ h1.center Comments(#{@post.comments.count})
 	.eight.wide.column
 		.left.aligned.grid
 			= form_for @comment, url: post_comments_path, method: :post do |f|
+				= render 'shared/error_messages', object: f.object
 				= f.label :comment, class: 'center'
 				br
 				= f.text_area :content, rows: "6", cols: "57"
-				= f.hidden_field :post_id, value: @post.id
+				/ = f.hidden_field :post_id, value: @post.id
 				br
 				= f.submit 'Leave comment', class: 'fluid ui button primary'
