--- a/app/views/shared/_error_messages.html.slim
+++ b/app/views/shared/_error_messages.html.slim
@@ -1,10 +1,8 @@
-- flash.each do |key, value|
-	div class=("#{flash_class(key)} closable") 
-		i.close.icon
-		= value
+- if object.errors.any?
+	.error_explanation
+		| This for contains
+			= "#{ pluralize(object.errors.count, 'error') }"
 
-javascript:
-	$ ->
-		$(".message.closable .close.icon").on 'click', ->
-			$('.message.closable').fadeOut('slow')
-			false
+	ul
+		- object.errors.full_messages.each do |msg|
+			li = msg
