--- a/app/views/shared/_post_form.html.slim
+++ b/app/views/shared/_post_form.html.slim
@@ -1,8 +1,10 @@
-= form_for @post, url: posts_path, method: :post do |f|
+= form_for @post, url: posts_path, method: :post, html: { multipart: true } do |f|
 	= render 'shared/error_messages', object: f.object
 	.field.six.wide.column
 		= f.label :post
 		br
 		= f.text_area :content, rows: 6, cols: 35, placeholder: 'Write something'
+		br
+		= f.file_field :image
 
 	= f.submit 'Post', class: 'ui primary basic button'
