--- a/app/views/user_mailer/send_welcome_email.html.slim
+++ b/app/views/user_mailer/send_welcome_email.html.slim
@@ -1,3 +1,4 @@
 h3 = "Welcome #{ @user.first_name.capitalize } #{ @user.last_name.capitalize }"
 
-p = "You have been signed up for Odinbook. To login please click the following link: #{ @url }"
+p You have been signed up for Odinbook. To login please click the following link:
+= link_to 'Odinbook', new_user_session_url
