--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -4,6 +4,7 @@
 	.wall.six.wide.column
 		.center.aligned = paginate @feed_items
 		= render 'shared/wall'
+		.center.aligned = paginate @feed_items
 
 	.post_form.center.aligned
 		= render 'shared/post_form'
