--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -2,8 +2,10 @@
 	.four.wide.column
 	.eight.wide.column
 		ul
+			.center = paginate @users
 			- (@users - [current_user]).each do |user|
 				.ui.raised.segment
 					li = link_to "#{ user.first_name.capitalize } #{ user.last_name.capitalize }", user_path(user) 
 					- if !current_user.friends.include?(user)
 						= link_to 'Add Friend', friendships_path(friend_id: user), method: :post
+			.center = paginate @users
