--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,7 +10,7 @@ html
     = render 'layouts/header'
     
     .ui.container
-      = render 'shared/flash_messages'
+      / = render 'shared/flash_messages'
       / = render 'shared/error_messages'
 
       p.notice
