--- a/app/views/comments/index.html.slim
+++ b/app/views/comments/index.html.slim
@@ -8,7 +8,7 @@ h1.center Comments
 			.center = paginate @comments, params: { action: :index }
 			- @comments.each do |comment|
 				.ui.raised.segment
-					li = "#{ comment.user.first_name.capitalize } #{ comment.user.last_name.capitalize }"
+					li = "#{ full_name(comment.user) }"
 					li = comment.content
 					- if current_user.id == comment.user_id
 						= link_to 'Delete', post_comment_path(@post, comment), method: :delete
@@ -20,9 +20,9 @@ h1.center Comments
 		.left.aligned.grid
 			= form_for @comment, url: post_comments_path, method: :post do |f|
 				= render 'shared/error_messages', object: f.object
+
 				= f.label :comment, class: 'center'
 				br
 				= f.text_area :content, rows: "6", cols: "57"
-				/ = f.hidden_field :post_id, value: @post.id
 				br
 				= f.submit 'Leave comment', class: 'fluid ui button primary'
