--- a/app/views/user_mailer/send_welcome.email.text.slim
+++ b/app/views/user_mailer/send_welcome.email.text.slim
@@ -1,4 +1,4 @@
-= "Welcome #{ @user.first_name.capitalize } #{ @user.last_name.capitalize }"
+= "Welcome #{ full_name(@user) }"
 
 | You have been signed up for Odinbook. To login please click the following link:
 = link_to 'Odinbook', new_user_session_url
