--- a/app/views/users/friends.html.slim
+++ b/app/views/users/friends.html.slim
@@ -1,12 +1,12 @@
 h1.center Friends
 ul 
 	- current_user.friends.each do |friend|
-		li = link_to"#{friend.first_name.capitalize} #{friend.last_name.capitalize}", user_path(friend)
+		li = link_to full_name(friend), user_path(friend)
 	end
 
 h1.center Pending
 ul
 	- current_user.requested_friendships.each do |request|
-		li = link_to "#{request.first_name.capitalize} #{request.last_name.capitalize}", user_path(request)
+		li = link_to full_name(request), user_path(request)
 		li = link_to 'Accept', friendship_path(friend_id: request.id),method: "put"
 		li = link_to 'Decline', friendship_path(friend_id: request.id), method: :delete
